<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <uk.co.edgeorgedev.yonderandbeyonddatacapture.KenBurnsSupportView
            android:id="@+id/kbv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/candidate_information"
                    android:layout_gravity="center"
                    android:padding="16dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/full_name"
                        android:ems="10"
                        android:id="@+id/name_edit_text"
                        android:maxLength="75"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:ems="10"
                        android:maxLength="75"
                        android:id="@+id/email_edit_text"
                        android:layout_below="@+id/name_edit_text"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:ems="10"
                        android:maxLength="25"
                        android:id="@+id/phone_edit_text"
                        android:layout_below="@+id/email_edit_text"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:hint="@string/notes"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/note_edit_text"
                        android:maxLines="7"
                        android:layout_below="@+id/phone_edit_text"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="4dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear"
                        android:id="@+id/clear_button"
                        android:background="@drawable/clear_style"
                        android:layout_below="@+id/note_edit_text"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:id="@+id/submit_button"
                        android:background="@drawable/submit_style"
                        android:layout_below="@+id/note_edit_text"
                        android:layout_toRightOf="@+id/clear_button"
                        android:layout_toEndOf="@+id/clear_button"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>